crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_own_roundtrip.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: Some(
                I32,
            ),
            params: [],
            locals: [
                Local {
                    name: Some(
                        "heap",
                    ),
                    ty: Some(
                        Own(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Own(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: Some(
                        "raw",
                    ),
                    ty: Some(
                        RawPtr(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        RawPtr(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: Some(
                        "again",
                    ),
                    ty: Some(
                        Own(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Own(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: OwnNew {
                                value: Int(
                                    7,
                                ),
                                elem_type: I32,
                            },
                        },
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Move(
                                LocalId(
                                    1,
                                ),
                            ),
                        },
                        Assign {
                            local: LocalId(
                                3,
                            ),
                            value: OwnIntoRaw {
                                base: LocalId(
                                    0,
                                ),
                                elem_type: I32,
                            },
                        },
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: Move(
                                LocalId(
                                    3,
                                ),
                            ),
                        },
                        Assign {
                            local: LocalId(
                                5,
                            ),
                            value: OwnFromRaw {
                                ptr: Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                                elem_type: I32,
                            },
                        },
                        Assign {
                            local: LocalId(
                                4,
                            ),
                            value: Move(
                                LocalId(
                                    5,
                                ),
                            ),
                        },
                        Drop(
                            LocalId(
                                4,
                            ),
                        ),
                        Return(
                            Some(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
