crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_ret_const.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    functions: [
        MirFunction {
            name: "main",
            ret_type: None,
            params: [],
            locals: [],
            blocks: [
                MirBlock {
                    insts: [
                        Return(
                            Some(
                                Int(
                                    1,
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
