crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_shared_clone.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {},
    functions: [
        MirFunction {
            name: "main",
            ret_type: Some(
                I32,
            ),
            params: [],
            locals: [
                Local {
                    name: Some(
                        "s1",
                    ),
                    ty: Some(
                        Shared(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Shared(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: Some(
                        "s2",
                    ),
                    ty: Some(
                        Shared(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Shared(
                            I32,
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: SharedNew {
                                value: Int(
                                    7,
                                ),
                                elem_type: I32,
                            },
                        },
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Move(
                                LocalId(
                                    1,
                                ),
                            ),
                        },
                        Assign {
                            local: LocalId(
                                3,
                            ),
                            value: SharedClone {
                                base: LocalId(
                                    0,
                                ),
                                elem_type: I32,
                            },
                        },
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: Move(
                                LocalId(
                                    3,
                                ),
                            ),
                        },
                        Drop(
                            LocalId(
                                2,
                            ),
                        ),
                        Drop(
                            LocalId(
                                0,
                            ),
                        ),
                        Return(
                            Some(
                                Int(
                                    0,
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
