crates/glyph-frontend/tests/snapshots/mir_fixtures__mir_struct_return.snap
---
source: crates/glyph-frontend/tests/mir_fixtures.rs
expression: out.mir
---
MirModule {
    struct_types: {
        "Point": StructType {
            name: "Point",
            fields: [
                (
                    "x",
                    I32,
                ),
                (
                    "y",
                    I32,
                ),
            ],
        },
    },
    functions: [
        MirFunction {
            name: "make_point",
            ret_type: Some(
                Named(
                    "Point",
                ),
            ),
            params: [],
            locals: [
                Local {
                    name: Some(
                        "p",
                    ),
                    ty: Some(
                        Named(
                            "Point",
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Named(
                            "Point",
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: StructLit {
                                struct_name: "Point",
                                field_values: [
                                    (
                                        "x",
                                        Int(
                                            3,
                                        ),
                                    ),
                                    (
                                        "y",
                                        Int(
                                            4,
                                        ),
                                    ),
                                ],
                            },
                        },
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Move(
                                LocalId(
                                    1,
                                ),
                            ),
                        },
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        0,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
        MirFunction {
            name: "main",
            ret_type: Some(
                I32,
            ),
            params: [],
            locals: [
                Local {
                    name: Some(
                        "pt",
                    ),
                    ty: Some(
                        Named(
                            "Point",
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        Named(
                            "Point",
                        ),
                    ),
                    mutable: false,
                    skip_drop: false,
                },
                Local {
                    name: None,
                    ty: Some(
                        I32,
                    ),
                    mutable: false,
                    skip_drop: false,
                },
            ],
            blocks: [
                MirBlock {
                    insts: [
                        Assign {
                            local: LocalId(
                                1,
                            ),
                            value: Call {
                                name: "make_point",
                                args: [],
                            },
                        },
                        Assign {
                            local: LocalId(
                                0,
                            ),
                            value: Move(
                                LocalId(
                                    1,
                                ),
                            ),
                        },
                        Assign {
                            local: LocalId(
                                2,
                            ),
                            value: FieldAccess {
                                base: LocalId(
                                    0,
                                ),
                                field_name: "x",
                                field_index: 0,
                            },
                        },
                        Drop(
                            LocalId(
                                0,
                            ),
                        ),
                        Return(
                            Some(
                                Local(
                                    LocalId(
                                        2,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
